--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   </div>
 
   <!-- 主要欄位 -->
+  <button id="btnAI" class="btn">✨ AI 生成標題/描述</button>
   <div class="cell">
     <div class="row">
       <input id="title" type="text" placeholder="片名（預設取檔名）" />
@@ -138,7 +139,7 @@
 <script>
 /** 必填：你的 Google OAuth Client ID 與 GAS Web App URL */
 const CLIENT_ID = '783633103016-3e7u1n8vpt9essjnct4dirije16u8b23.apps.googleusercontent.com';
-const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwiY2z03BuBVk39wgCTgTT_lfMvV4qnoUXqil0yfSOKOFXglqKMrKCRsZeFsxYZLy-1/exec';
+const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxx8uDLu8UaWFn3Lm_tX1AvD3axqzm3uswyvSa0iqpYfnClxDodkS5EUYMZN8m6o3_7/exec';
 
 /** 續傳設定 */
 const CHUNK_SIZE = 8 * 1024 * 1024; // 8MB（256KB 倍數）
@@ -156,6 +157,7 @@ const btnAuth=el('btnAuth'), btnGeo=el('btnGeo'), btnUpload=el('btnUpload');
 const fileInput=el('file'), titleEl=el('title'), descEl=el('desc'), catEl=el('category'), privacyEl=el('privacy');
 const takenEl=el('takenTime'), latEl=el('lat'), lngEl=el('lng'), writeSheetEl=el('writeSheet');
 const bar=el('bar'), statusEl=el('status'), progressText=el('progressText'), resumeHint=el('resumeHint');
+const btnAI = document.getElementById('btnAI');
 
 window.onload = () => {
   tokenClient = google.accounts.oauth2.initTokenClient({
@@ -171,6 +173,76 @@ window.onload = () => {
   btnUpload.addEventListener('click', startUpload);
 };
 
+btnAI.addEventListener('click', async () => {
+  const f = fileInput.files?.[0];
+  if (!f) return alert('請先選擇影片');
+
+  setStatus('AI 分析影格中…');
+  const frames = await captureFramesFromVideoFile(f, [0.0, 0.5, 0.95]); // 0%、50%、95%
+
+  setStatus('向 AI 產生建議…');
+  const ai = await fetch(GAS_WEB_APP_URL + '?action=ai_summarize', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' }, // 走 JSON，GAS 端讀 e.postData.contents
+    body: JSON.stringify({
+      images: frames,                  // [{mimeType:'image/jpeg', data:'base64...'}, ...]
+      // 這些是輔助線索，AI 品質更穩
+      hint: {
+        taken_time: getTakenISO() || null,
+        lat: hasLocation() ? parseFloat(latEl.value) : null,
+        lng: hasLocation() ? parseFloat(lngEl.value) : null,
+        category_fixed: 'Travel & Events'
+      }
+    })
+  }).then(r=>r.json()).catch(e=>({ ok:false, error:String(e)}));
+
+  if (!ai || !ai.ok) {
+    setStatus('AI 生成失敗'); 
+    return alert('AI 生成失敗：' + (ai?.error || ''));
+  }
+
+  // 自動填入
+  if (ai.title && !titleEl.value) titleEl.value = ai.title;
+  if (ai.desc) descEl.value = ai.desc;
+  if (ai.tags && Array.isArray(ai.tags)) {
+    // 若你有 tags 欄位就填入，沒有就附加到描述最後
+    const line = ai.tags.map(s=>`#${s.replace(/\s+/g,'')}`).join(' ');
+    descEl.value = (descEl.value ? (descEl.value + '\n\n') : '') + line;
+  }
+  setStatus('AI 建議已套用');
+});
+
+// 讀影片→擷取多張影格（回傳 base64 陣列）
+async function captureFramesFromVideoFile(file, points=[0.0,0.5,0.95]) {
+  const url = URL.createObjectURL(file);
+  const video = document.createElement('video');
+  video.src = url; video.muted = true; video.playsInline = true; // iOS 需要
+  await videoLoaded(video);
+
+  const w = 512;                                 // 降尺寸，讓上傳更快
+  const h = Math.round((video.videoHeight / video.videoWidth) * w);
+  const canvas = document.createElement('canvas');
+  canvas.width = w; canvas.height = h;
+  const ctx = canvas.getContext('2d');
+
+  const frames = [];
+  for (const p of points) {
+    await seekTo(video, p * video.duration);
+    ctx.drawImage(video, 0, 0, w, h);
+    const dataUrl = canvas.toDataURL('image/jpeg', 0.8);
+    frames.push({ mimeType:'image/jpeg', data: dataUrl.split(',')[1] }); // 去掉前綴，只留 base64
+  }
+  URL.revokeObjectURL(url);
+  return frames;
+}
+function videoLoaded(v){ return new Promise(r=> v.onloadedmetadata = ()=>r()); }
+function seekTo(v, time){ 
+  return new Promise((resolve) => {
+    const handler = ()=>{ v.removeEventListener('seeked', handler); resolve(); };
+    v.addEventListener('seeked', handler); v.currentTime = Math.min(Math.max(time,0), v.duration || 0); 
+  });
+}
+  
 /** 顯示目前頻道 */
 async function fetchChannel(){
   try{
